# gtlib2

./: .gitignore  CMakeLists.txt  COMPILATION_NOTES.md  CONTRIBUTING.md  Doxyfile  INSTALL_LP.md  LICENSE.txt  LPSolver.cpp  LPSolver.h  README-utils.txt  README.md  base.cpp  base.h  doubleOracleNFG.cpp  doubleOracleNFG.h  efg.cpp  efg.h  example_BuildConfiguration.txt  main  main.cpp  normalFormLP.cpp  normalFormLP.h  phantomTTT.cpp  phantomTTT.h  pursuit.cpp  pursuit.h  utils.h
LPsolvers/: AbstractLPSolver.h  CMakeLists.txt  CplexLPSolver.cpp  CplexLPSolver.h  GlpkLPSolver.cpp  GlpkLPSolver.h  GurobiLPSolver.cpp  GurobiLPSolver.h  LPSolver.cpp  LPSolver.h  simpleCplexSolver.cpp  simpleCplexSolver.h
algorithms/: CMakeLists.txt  bestResponse.cpp  bestResponse.h  bestResponseTest.cpp  cfr.cpp  cfr.h  cfrTest.cpp  cfr_cr.cpp  cfr_cr.h  common.cpp  common.h  commonTest.cpp  continualResolving.h  crTest.cpp  doubleOracleNFG.cpp  doubleOracleNFG.h  equilibrium.cpp  equilibrium.h  evaluation.cpp  evaluation.h  mccr.cpp  mccr.h  mccrTest.cpp  mccrTest.h  normalFormLP.cpp  normalFormLP.h  onlineAvgStrategy.h  oos.cpp  oos.h  oosTest.cpp  oosTest.h  stats.cpp  stats.h  strategy.cpp  strategy.h  tree.cpp  tree.h  treeWalk.cpp  treeWalk.h  utility.cpp  (+2 more)
algorithms/MCTS/: CPWISMCTS.cpp  CPWISMCTS.h  CPW_ISMCTS.cpp  CPW_ISMCTS.h  DD_ISMCTS.cpp  DD_ISMCTS.h  ISMCTS.cpp  ISMCTS.h  ISMCTSTest.cpp  ISMCTS_settings.h
algorithms/MCTS/selectors/: Exp3LSelector.cpp  Exp3LSelector.h  Exp3Selector.cpp  Exp3Selector.h  Exp3SelectorFactory.cpp  Exp3SelectorFactory.h  RMSelector.cpp  RMSelector.h  RMSelectorFactory.cpp  RMSelectorFactory.h  UCTSelector.cpp  UCTSelector.h  UCTSelectorFactory.cpp  UCTSelectorFactory.h  selector.h  selectorFactory.h
base/: CMakeLists.txt  algorithm.cpp  algorithm.h  algorithmTest.cpp  base.cpp  base.h  base_old.cpp  base_old.h  cache.cpp  cache.h  cacheTest.cpp  constrainingDomain.h  constrainingDomainTest.cpp  efg.cpp  efg.h  efgTest.cpp  efg_old.cpp  efg_old.h  fogefg.cpp  fogefg.h  gadget.cpp  gadget.h  gadgetTest.cpp  hashing.cpp  hashing.h  hashingTest.cpp  includes.h  random.cpp  random.h  tree.h
cli/: CMakeLists.txt  benchmark_cfr.h  calc_expl.h  cfr_regrets.h  cli_helpers.h  export_domain.h  export_ring.h  global_args.h  play_match.h
cplexfiles/: CplexLPSolver.cpp  CplexLPSolver.h  normalFormLP.cpp  normalFormLP.h
domains/: CMakeLists.txt  RhodeIslandPoker.cpp  RhodeIslandPoker.h  chessboard_factory.cpp  chessboard_factory.h  domainsTest.cpp  domainsTest.h  gambit.cpp  gambit.h  gambitTest.cpp  genericPoker.cpp  genericPoker.h  genericPokerTest.cpp  goofSpiel.cpp  goofSpiel.h  goofSpielTest.cpp  kriegSpielTest.cpp  kriegspiel.cpp  kriegspiel.h  liarsDice.cpp  liarsDice.h  liarsDiceTest.cpp  matchingPenniesTest.cpp  matching_pennies.cpp  matching_pennies.h  normalFormGameTest.cpp  normal_form_game.cpp  normal_form_game.h  oshiZumo.cpp  oshiZumo.h  oshiZumoTest.cpp  phantomTTT.cpp  phantomTTT.h  pursuit.cpp  pursuit.h  randomGame.cpp  randomGame.h  randomGameTest.cpp  simplePoker.cpp  simplePoker.h  (+4 more)
domains/gambit/: gambit.cpp  gambit.h  gambit_games.cpp  gambit_games.h
experiments/: benchmark_cfr.h  calc_expl.h  cfr_regrets.h  export_domain.h  export_ring.h  play_match.h
experiments/mccr_journal/: commands_expl_3d.py  commands_expl_slices.py  commands_tournament.py  common.py  experiments.md  experiments_notes.md  rci_array_batch_run.sh  rci_array_run.sh  rci_launch_batch.sh
experiments/mccr_journal/cfg/: MCCFR.ini  MCCR_naivekeep.ini  MCCR_reset.ini  MCCR_reweighkeep.ini  OOS.ini  RND.ini
glpkfiles/: GlpkLPSolver.h
lib/googletest/googlemock/: CMakeLists.txt
lib/googletest/googlemock/docs/: CookBook.md
lib/googletest/googlemock/docs/v1_5/: CookBook.md
lib/googletest/googlemock/docs/v1_6/: CookBook.md
lib/googletest/googlemock/docs/v1_7/: CookBook.md
lib/googletest/googlemock/make/: Makefile
lib/googletest/googletest/: CMakeLists.txt  README.md
lib/googletest/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md  XcodeGuide.md
lib/googletest/googletest/m4/: acx_pthread.m4
lib/googletest/googletest/make/: Makefile
lib/googletest/googletest/scripts/test/: Makefile
modules/: FindCPLEX.cmake  directories.cmake
py_bindings/: README.md  draw.py  example.cpp
settings/: cfr.ini  cfr.json  mccr.ini  mccr.json  oos.ini  oos.json
tests/: DDISMCTSTest.cpp  ISMCTSTest.cpp  LPTest.cpp  README.md  algorithmTest.cpp  bestResponseTest.cpp  cacheTest.cpp  cfrTest.cpp  commonTest.cpp  constrainingDomainTest.cpp  crTest.cpp  domainsTest.cpp  domainsTest.h  efgTest.cpp  exportTest.cpp  firstTest.cpp  gadgetTest.cpp  gambitTest.cpp  genericPokerTest.cpp  goofSpielTest.cpp  hashingTest.cpp  kriegSpielTest.cpp  liarsDiceTest.cpp  matchingPenniesTest.cpp  mccrTest.cpp  mccrTest.h  normalFormGameTest.cpp  oosTest.cpp  oosTest.h  oshiZumoTest.cpp  randomGameTest.cpp  rangeTest.cpp  strategoTest.cpp  treeTest.cpp  utilityTest.cpp
utils/: CMakeLists.txt  args.hpp  benchmark.h  binomial.cpp  binomial.h  cli_helpers.h  combinatorics.cpp  draw.py  example.cpp  export.cpp  export.h  exportTest.cpp  functools.h  global_args.h  logging.h  nn_transform_data.cpp  nn_transform_data.h  range.h  rangeTest.cpp  utilities.txt  utils.h
