add_library(algorithms OBJECT
        bestResponse.h
        bestResponse.cpp
        cfr.h
        cfr.cpp
        cfr_cr.h
        cfr_cr.cpp
        common.h
        common.cpp
        continualResolving.h
        equilibrium.h
        equilibrium.cpp
        evaluation.h
        evaluation.cpp
        mccr.h
        mccr.cpp
        normalFormLP.h
        normalFormLP.cpp
        oos.h
        oos.cpp
        stats.h
        stats.cpp
        strategy.h
        strategy.cpp
        utility.h
        utility.cpp
        MCTS/ISMCTS.h
        MCTS/ISMCTS.cpp
        MCTS/ISMCTS_settings.h
        MCTS/CPW_ISMCTS.h
        MCTS/CPW_ISMCTS.cpp
        MCTS/selectors/selector.h
        MCTS/selectors/selectorFactory.h
        MCTS/selectors/UCTSelector.h
        MCTS/selectors/UCTSelector.cpp
        MCTS/selectors/UCTSelectorFactory.h
        MCTS/selectors/UCTSelectorFactory.cpp
        MCTS/selectors/RMSelector.h
        MCTS/selectors/RMSelector.cpp
        MCTS/selectors/RMSelectorFactory.h
        MCTS/selectors/RMSelectorFactory.cpp
        MCTS/selectors/Exp3Selector.h
        MCTS/selectors/Exp3Selector.cpp
        MCTS/selectors/Exp3LSelector.h
        MCTS/selectors/Exp3LSelector.cpp
        MCTS/selectors/Exp3SelectorFactory.h
        MCTS/selectors/Exp3SelectorFactory.cpp
        )
target_include_directories(algorithms PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

set(TEST_FILES ${TEST_FILES}
        algorithms/bestResponseTest.cpp
        algorithms/cfrTest.cpp
        algorithms/commonTest.cpp
        algorithms/crTest.cpp
        algorithms/MCTS/ISMCTSTest.cpp
        algorithms/mccrTest.cpp
        algorithms/oosTest.h
        algorithms/oosTest.cpp
        algorithms/utilityTest.cpp
        PARENT_SCOPE)
